--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,7 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
-addons/Todo_Manager
-addons/ColorPreview
-addons/cyberassets
-addons/kanban_tasks
-addons/project_time_tracker
+addons/*
 colors_demo.gd
 colors_demo.gdshader
 CONTRIBUTING.md
